--- a/timestamp/src/components/DayList/DayList.scss
+++ b/timestamp/src/components/DayList/DayList.scss
@@ -1,5 +1,8 @@
 .content {
   border: 2px solid var(--gray);
-  height: calc(100vh - 200px);
   padding: 20px;
+  margin-top: 20px;
+  @media screen and (min-width: 990px) and (max-width: 1200px) {
+    margin-top: 74px;
+  }
 }
