--- a/timestamp/src/styles/base.scss
+++ b/timestamp/src/styles/base.scss
@@ -6,24 +6,39 @@ body {
   );
   background-repeat: no-repeat;
   height: calc(100vh - 40px);
+  overflow: overlay;
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-}
-::-webkit-scrollbar-track {
-  background-color: #fafafa;
+  width: 4px;
+  background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(-45deg, #6a5af9, #d66efd);
+  background: linear-gradient(to bottom, magenta 0%, darkorchid 100%);
 }
 
 .d_flex {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: darkorchid;
 }
 
-.colorInput::placeholder {
-  color: #fff;
+.text-empty {
+  font-size: 40px;
+  font-weight: 600;
+  color: var(--white);
+  text-align: center;
+}
+
+@media screen and (min-width: 320px) and (max-width: 430px) {
+  body {
+    height: 100vh;
+    max-width: 100%;
+  }
+}
+@media screen and (min-width: 431px) and (max-width: 767px) {
+  body {
+    height: 100vh;
+  }
 }
