--- a/products/src/layouts/Header/Header.scss
+++ b/products/src/layouts/Header/Header.scss
@@ -18,12 +18,12 @@
     cursor: pointer;
     position: relative;
     display: inline-block;
-    span {
+    &::before {
+      content: attr(amount);
       background-color: var(--red);
       border-radius: 50%;
       width: 28px;
       height: 28px;
-      margin: 0 auto;
       display: flex;
       justify-content: center;
       align-items: center;
