--- a/products/src/component/ProductItem/ProductItem.scss
+++ b/products/src/component/ProductItem/ProductItem.scss
@@ -1,12 +1,14 @@
 .product__item {
-  margin-bottom: 20px;
+  background-color: var(--background);
+  box-shadow: var(--boxShadow);
+  border-radius: 20px;
+  padding: 10px;
+
   &-image {
-    width: 275px;
-    height: 260px;
-    object-fit: cover;
+    height: 80px;
     padding: 8px;
-    border-radius: 30px;
     transition: 0.3s linear;
+    margin: 0 auto;
 
     &:hover {
       transition: 0.3s linear;
@@ -16,7 +18,7 @@
 
   &-name {
     color: var(--white);
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     margin: 8px 0;
     text-align: center;
@@ -32,5 +34,6 @@
 
   &-btn {
     text-align: center;
+    margin-bottom: 10px;
   }
 }
